# rzd_bot

./: .gitignore  Dockerfile.main  Dockerfile.scheduler  cupe.py  docker-compose.yaml  helpers.py  import json.py  keyboards.py  main.py  parsing.py  pyproject.toml  routes.py  scheduler.py  sheduler.py  utils.py
