[tool.poetry]
name = "rzd-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
transliterate = "^1.10.2"
motor = "^3.6.0"
selectolax = "^0.3.21"
selenium = "^4.25.0"
requests = "^2.32.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
